--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -66,9 +66,6 @@
     <![endif]-->
 
     <!-- Gallery -->
-    <link href="//cdn.rawgit.com/noelboss/featherlight/1.3.5/release/featherlight.min.css" type="text/css" rel="stylesheet" />
-
-    <!-- Google Analytics -->
-    <%- partial('google-analytics') %>
+    <link href="lib/featherlight.min.css" type="text/css" rel="stylesheet" />
 
 </head>
