Including Search field

--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -24,6 +24,7 @@
     </div>
 
     <!-- After footer scripts -->
+    <%- partial('_partial/search') %>
     <%- partial('_partial/after-footer') %>
 
 </body>
