--- a/layout/_partial/after-footer.ejs
+++ b/layout/_partial/after-footer.ejs
@@ -17,3 +17,15 @@
 
 <!-- Gallery -->
 <script src="lib/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
+
+<% if (config.search) { %>
+<script type="text/javascript">
+    var search_path = "<%= config.search.path %>";
+    if (search_path.length == 0) {
+        search_path = "search.json";
+    }
+    var path = "<%= config.root %>" + search_path;
+    searchFunc(path, 'local-search-input', 'local-search-result');
+</script>
+<% } %>
+
