--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -3,6 +3,8 @@
     <p><%- theme.susbtitle_secondary %></p>
 </header>
 
+<div id="top_search"></div>
+
 <section class="tiles">
     <% page.posts.forEach(function(item, index){ %>
         <%- partial('_partial/article-index', {item: item, index: index}) %>
