Including Search field

--- a/layout/_partial/after-footer.ejs
+++ b/layout/_partial/after-footer.ejs
@@ -17,6 +17,7 @@
 
 <!-- Gallery -->
 <script src="lib/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="<%- config.root %>js/search.js"></script>
 
 <% if (config.search) { %>
 <script type="text/javascript">
