Including Search field

--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -3,6 +3,7 @@
     <p><%- theme.susbtitle_secondary %></p>
 </header>
 
+<%- partial('_widget/search') %>
 <div id="top_search"></div>
 
 <section class="tiles">
