--- a/source/sass/libs/_vars.scss
+++ b/source/sass/libs/_vars.scss
@@ -47,10 +47,10 @@ $palette: (
 	fg-accent:			#ffffff,
 	border:				#c9c9c9,
 	border-bg:			rgba(144,144,144,0.075),
-	accent1:			#f2849e,
-	accent2:			#7ecaf6,
-	accent3:			#7bd0c1,
-	accent4:			#c75b9b,
-	accent5:			#ae85ca,
-	accent6:			#8499e7,
+	accent1:			#ff6600,
+	accent2:			#059bd2,
+	accent3:			#5f6062,
+	accent4:			#ff6600,
+	accent5:			#059bd2,
+	accent6:			#5f6062,
 );
