--- a/source/sass/SkyLab/hexo-theme-phantom.scss
+++ b/source/sass/SkyLab/hexo-theme-phantom.scss
@@ -61,3 +61,7 @@ a:hover {
 #header nav ul li a[href="#menu"]:before{
     background-image: url("data:image/svg+xml;charset=utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'><style>line { stroke-width: 8px; stroke: " + $color_flush_orange_approx + "; }</style><line x1='0' y1='25' x2='100' y2='25' /><line x1='0' y1='50' x2='100' y2='50' /><line x1='0' y1='75' x2='100' y2='75' /></svg>");
 }
+
+.tiles article > .image:after {
+    background-image: none;
+}
