--- a/layout/_partial/after-footer.ejs
+++ b/layout/_partial/after-footer.ejs
@@ -16,7 +16,7 @@
 <%- js('js/main.js') %>
 
 <!-- Gallery -->
-<script src="lib/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="<%- config.root %>lib/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="<%- config.root %>js/search.js"></script>
 
 <% if (config.search) { %>
