--- a/source/sass/libs/_vars.scss
+++ b/source/sass/libs/_vars.scss
@@ -40,7 +40,7 @@ $font: (
 
 // Palette.
 $palette: (
-	bg:					#f7cfb4,
+	bg:					#eae9e9,
 	bg-accent:			#333333,
 	bg-alt:				#f6f6f6,
 	fg:					#585858,
