--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -66,6 +66,6 @@
     <![endif]-->
 
     <!-- Gallery -->
-    <link href="lib/featherlight.min.css" type="text/css" rel="stylesheet" />
+    <link href="<%- config.root %>lib/featherlight.min.css" type="text/css" rel="stylesheet" />
 
 </head>
