--- a/source/sass/libs/_vars.scss
+++ b/source/sass/libs/_vars.scss
@@ -50,7 +50,7 @@ $palette: (
 	accent1:			#ff6600,
 	accent2:			#059bd2,
 	accent3:			#5f6062,
-	accent4:			#ff6600,
-	accent5:			#059bd2,
-	accent6:			#5f6062,
+	accent4:			#05d2a3,
+	accent5:			#b1268c,
+	accent6:			#a08837,
 );
