--- a/source/sass/SkyLab/hexo-theme-phantom.scss
+++ b/source/sass/SkyLab/hexo-theme-phantom.scss
@@ -10,6 +10,11 @@ h1 {
     letter-spacing: normal;
 }
 
+h2 {
+    @extend .sk-sectionName;
+    letter-spacing: normal;
+}
+
 
 h3 {
     @extend .sk-subsection;
